Implement first setup of new logging user logger

--- a/notebooks/01_utils_logging.ipynb
+++ b/notebooks/01_utils_logging.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1",
    "metadata": {},
    "source": [
     "# 01 — Logging Utilities for Bronze and Silver Processing\n",
@@ -29,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {
     "tags": [
      "parameters"
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "source": [
     "## [1] Setup: Imports and Schemas"
@@ -53,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +74,23 @@
     "from pyspark.sql import functions as F\n",
     "from datetime import date\n",
     "from typing import List, Dict, Any, Optional\n",
-    "from pyspark.sql import DataFrame \n"
+    "from pyspark.sql import DataFrame \n",
+    "\n",
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "if not logger.handlers:\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "source": [
     "## [2] Bronze Processing Log Schema"
@@ -80,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +138,12 @@
     "    StructField(\"delta_table\",      StringType(),    True),   # Target Bronze table\n",
     "])\n",
     "\n",
-    "print(f\"Bronze log schema defined: {BRONZE_LOG_TABLE_FULLNAME}\")"
+    "logger.info(f\"Bronze log schema defined: {BRONZE_LOG_TABLE_FULLNAME}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "## [3] Bronze Run Summary Schema"
@@ -133,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,12 +195,12 @@
     "        ]\n",
     ")\n",
     "\n",
-    "print(f\"Bronze summary schema defined: {BRONZE_SUMMARY_TABLE_FULLNAME}\")"
+    "logger.info(f\"Bronze summary schema defined: {BRONZE_SUMMARY_TABLE_FULLNAME}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "## [4] Silver Processing Log Schema"
@@ -190,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,12 +255,12 @@
     "    StructField(\"silver_table\",     StringType(),    True),   # Target Silver table\n",
     "])\n",
     "\n",
-    "print(f\"Silver log schema defined: {SILVER_LOG_TABLE_FULLNAME}\")"
+    "logger.info(f\"Silver log schema defined: {SILVER_LOG_TABLE_FULLNAME}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "source": [
     "## [5] Silver Run Summary Schema"
@@ -250,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,12 +305,12 @@
     "    StructField(\"failed_tables\",       StringType(),    True),\n",
     "])\n",
     "\n",
-    "print(f\"Silver summary schema defined: {SILVER_SUMMARY_TABLE_FULLNAME}\")"
+    "logger.info(f\"Silver summary schema defined: {SILVER_SUMMARY_TABLE_FULLNAME}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "## [6] Create Log Tables (Idempotent)"
@@ -300,13 +319,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Ensure logs schema exists\n",
     "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS {LOG_SCHEMA}\")\n",
-    "print(f\"✓ Schema '{LOG_SCHEMA}' ready\")\n",
+    "logger.info(f\"✓ Schema '{LOG_SCHEMA}' ready\")\n",
     "\n",
     "if not spark.catalog.tableExists(BRONZE_LOG_TABLE_FULLNAME):\n",
     "    empty_df = spark.createDataFrame([], bronze_processing_log_schema)\n",
@@ -338,12 +357,12 @@
     "         .mode(\"append\")   # of .mode(\"ignore\")\n",
     "         .saveAsTable(SILVER_SUMMARY_TABLE_FULLNAME))\n",
     "\n",
-    "print(\"\\n✓ All log tables ready\")"
+    "logger.info(\"\\n✓ All log tables ready\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "## [7] Helper Functions"
@@ -352,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,12 +403,12 @@
     "    return error_msg[:max_length] + \"... [TRUNCATED]\"\n",
     "\n",
     "\n",
-    "print(\"✓ Helper functions defined\")"
+    "logger.info(\"✓ Helper functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "## [8] Bronze Logging Functions"
@@ -398,11 +417,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_bronze_batch(bronze_results: List[Dict[str, Any]], run_log_id: str, failed_tables: List[str]) -> None:\n",
+    "def log_bronze_batch(bronze_results: List[Dict[str, Any]], run_log_id: str) -> None:\n",
     "    \"\"\"\n",
     "    Write many Bronze log records in a single batch append.\n",
     "    \n",
@@ -456,7 +475,7 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(BRONZE_LOG_TABLE_FULLNAME))\n",
     "    \n",
-    "    print(f\"✓ Logged {len(bronze_results)} Bronze records to {BRONZE_LOG_TABLE_FULLNAME}\")\n",
+    "    logger.info(f\"✓ Logged {len(bronze_results)} Bronze records to {BRONZE_LOG_TABLE_FULLNAME}\")\n",
     "\n",
     "def log_bronze_summary(summary: dict) -> str:\n",
     "    \"\"\"\n",
@@ -515,12 +534,12 @@
     "    return log_id\n",
     "\n",
     "\n",
-    "print(\"✓ Bronze logging functions defined\")"
+    "logger.info(\"✓ Bronze logging functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "source": [
     "## [9] Silver Logging Functions"
@@ -529,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +611,7 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(SILVER_LOG_TABLE_FULLNAME))\n",
     "    \n",
-    "    print(f\"✓ Logged {len(records)} Silver records to {SILVER_LOG_TABLE_FULLNAME}\")\n",
+    "    logger.info(f\"✓ Logged {len(records)} Silver records to {SILVER_LOG_TABLE_FULLNAME}\")\n",
     "\n",
     "\n",
     "def log_silver_summary(summary: Dict[str, Any]) -> None:\n",
@@ -640,15 +659,15 @@
     "       .mode(\"append\")\n",
     "       .saveAsTable(SILVER_SUMMARY_TABLE_FULLNAME))\n",
     "    \n",
-    "    print(f\"✓ Logged Silver summary to {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
+    "    logger.info(f\"✓ Logged Silver summary to {SILVER_SUMMARY_TABLE_FULLNAME}\")\n",
     "\n",
     "\n",
-    "print(\"✓ Silver logging functions defined\")"
+    "logger.info(\"✓ Silver logging functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "source": [
     "## [10] Query Helper Functions"
@@ -657,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,12 +775,12 @@
     "    return latest[0].asDict()\n",
     "\n",
     "\n",
-    "print(\"✓ Query helper functions defined\")"
+    "logger.info(\"✓ Query helper functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "## [11] Verification\n",
@@ -772,13 +791,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(\"=\" * 80)\n",
-    "# print(\"LOGGING INFRASTRUCTURE VERIFICATION\")\n",
-    "# print(\"=\" * 80)\n",
+    "# logger.info(\"=\" * 80)\n",
+    "# logger.info(\"LOGGING INFRASTRUCTURE VERIFICATION\")\n",
+    "# logger.info(\"=\" * 80)\n",
     "\n",
     "# tables_to_check = [\n",
     "#     BRONZE_LOG_TABLE_FULLNAME,\n",
@@ -789,16 +808,16 @@
     "\n",
     "# for table_name in tables_to_check:\n",
     "#     if not spark.catalog.tableExists(table_name):\n",
-    "#         print(f\"✗ {table_name:<40} NOT FOUND\")\n",
+    "#         logger.info(f\"✗ {table_name:<40} NOT FOUND\")\n",
     "#         continue\n",
     "\n",
     "#     try:\n",
     "#         count = spark.table(table_name).count()\n",
-    "#         print(f\"✓ {table_name:<40} {count:>10,} rows\")\n",
+    "#         logger.info(f\"✓ {table_name:<40} {count:>10,} rows\")\n",
     "#     except Exception as e:\n",
-    "#         print(f\"! {table_name:<40} ERROR: {type(e).__name__}: {e}\")\n",
+    "#         logger.info(f\"! {table_name:<40} ERROR: {type(e).__name__}: {e}\")\n",
     "\n",
-    "# print(\"\\n✓ Logging infrastructure ready for Bronze and Silver processing\")"
+    "# logger.info(\"\\n✓ Logging infrastructure ready for Bronze and Silver processing\")"
    ]
   }
  ],
