--- a/notebooks/10_bronze_load.ipynb
+++ b/notebooks/10_bronze_load.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1",
    "metadata": {},
    "source": [
     "# 10 — Bronze Load Worker\n",
@@ -34,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {
     "tags": [
      "parameters"
@@ -50,31 +58,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "source": [
     "## [1] Imports and Path Detection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql import functions as F\n",
-    "from pyspark.sql.functions import (\n",
-    "    lit, current_timestamp, input_file_name, col, year, month\n",
-    ")\n",
-    "from datetime import datetime, timezone\n",
-    "from typing import Dict, Any\n",
-    "from uuid import uuid4\n",
-    "import os\n",
-    "from modules.path_utils import build_parquet_dir\n",
-    "from pyspark.sql import functions as F\n",
-    "\n",
-    "print(\"✓ Imports loaded\")"
    ]
   },
   {
@@ -84,19 +71,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pyspark.sql import functions as F\n",
+    "from pyspark.sql.functions import (\n",
+    "    lit, input_file_name, col, year, month\n",
+    ")\n",
+    "from datetime import datetime, timezone\n",
+    "from typing import Dict, Any\n",
+    "from uuid import uuid4\n",
+    "import os\n",
+    "from modules.path_utils import build_parquet_dir\n",
+    "from pyspark.sql import functions as F\n",
+    "\n",
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "if not logger.handlers:\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)\n",
+    "\n",
+    "logger.info(\"✓ Imports loaded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Auto-detect base path (Fabric vs Cluster)\n",
     "# Base path voor Files/Tables gebruiken we centraal vanuit 02_utils_config\n",
     "\n",
     "try:\n",
     "    # Als 02_utils_config al gedraaid heeft, staat BASE_PATH al in de globals\n",
     "    BASE_PATH  # type: ignore[name-defined]\n",
-    "    print(f\"✓ Base path (bronze worker): {BASE_PATH}\")\n",
+    "    logger.info(f\"✓ Base path (bronze worker): {BASE_PATH}\")\n",
     "    env_type = (\n",
     "        \"Fabric\" if \"/lakehouse/default/Files\" in BASE_PATH\n",
     "        else \"Custom Cluster\" if \"/data/lakehouse/\" in BASE_PATH\n",
     "        else \"Cluster/Relative\"\n",
     "    )\n",
-    "    print(f\"✓ Environment (bronze worker): {env_type}\")\n",
+    "    logger.info(f\"✓ Environment (bronze worker): {env_type}\")\n",
     "except NameError:\n",
     "    # Fallback zodat je 10_bronze_load ook stand-alone kunt draaien\n",
     "    import glob\n",
@@ -130,13 +148,13 @@
     "        else \"Custom Cluster\" if \"/data/lakehouse/\" in BASE_PATH\n",
     "        else \"Local/Relative\"\n",
     "    )\n",
-    "    print(f\"✓ Base path (bronze worker – fallback): {BASE_PATH}\")\n",
-    "    print(f\"✓ Environment (bronze worker – fallback): {env_type}\")\n"
+    "    logger.info(f\"✓ Base path (bronze worker – fallback): {BASE_PATH}\")\n",
+    "    logger.info(f\"✓ Environment (bronze worker – fallback): {env_type}\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "source": [
     "## [2] Helper Functions"
@@ -145,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,12 +211,12 @@
     "\n",
     "\n",
     "\n",
-    "print(\"✓ Helper functions defined\")"
+    "logger.info(\"✓ Helper functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "## [3] Core Worker Function\n",
@@ -209,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +289,7 @@
     "        duration = int((end_time - start_time).total_seconds())\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"[{table_name}] SKIPPED: unsupported load_mode '{load_mode}'\")\n",
+    "            logger.info(f\"[{table_name}] SKIPPED: unsupported load_mode '{load_mode}'\")\n",
     "        \n",
     "        return {\n",
     "            \"log_id\": log_id,\n",
@@ -306,9 +324,9 @@
     "    parquet_glob = f\"{parquet_dir}/*.parquet\"\n",
     "    \n",
     "    if debug:\n",
-    "        print(f\"[{table_name}] Starting ({load_mode})\")\n",
-    "        print(f\"  Parquet: {parquet_dir}\")\n",
-    "        print(f\"  Target: {delta_table_full}\")\n",
+    "        logger.info(f\"[{table_name}] Starting ({load_mode})\")\n",
+    "        logger.info(f\"  Parquet: {parquet_dir}\")\n",
+    "        logger.info(f\"  Target: {delta_table_full}\")\n",
     "    \n",
     "    # ========================================================================\n",
     "    # STEP 1: Read Parquet\n",
@@ -324,7 +342,7 @@
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] SKIPPED: No parquet files in {parquet_dir}\")\n",
+    "                logger.info(f\"[{table_name}] SKIPPED: No parquet files in {parquet_dir}\")\n",
     "            \n",
     "            return {\n",
     "                \"log_id\": log_id,\n",
@@ -349,7 +367,7 @@
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] FAILED reading parquet: {str(e)[:200]}\")\n",
+    "                logger.info(f\"[{table_name}] FAILED reading parquet: {str(e)[:200]}\")\n",
     "            \n",
     "            return {\n",
     "                \"log_id\": log_id,\n",
@@ -397,7 +415,7 @@
     "                    .withColumn(month_col, month(col(window_col)))\n",
     "                \n",
     "                if debug:\n",
-    "                    print(f\"  Added partitioning: {year_col}, {month_col} from {window_col}\")\n",
+    "                    logger.info(f\"  Added partitioning: {year_col}, {month_col} from {window_col}\")\n",
     "    \n",
     "    # ========================================================================\n",
     "    # STEP 3: Write to Delta\n",
@@ -414,7 +432,7 @@
     "                .partitionBy(\"_bronze_load_ts\")\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"  Mode: APPEND with partition by _bronze_load_ts (CDC history)\")\n",
+    "                logger.info(f\"  Mode: APPEND with partition by _bronze_load_ts (CDC history)\")\n",
     "        \n",
     "        elif load_mode in (\"snapshot\", \"window\"):\n",
     "            # OVERWRITE entire table\n",
@@ -435,7 +453,7 @@
     "                        .partitionBy(year_col, month_col)\n",
     "                    \n",
     "                    if debug:\n",
-    "                        print(f\"  Mode: OVERWRITE with partitioning by {year_col}, {month_col}\")\n",
+    "                        logger.info(f\"  Mode: OVERWRITE with partitioning by {year_col}, {month_col}\")\n",
     "                else:\n",
     "                    # Unknown partition type, just overwrite\n",
     "                    writer = df_with_meta.write \\\n",
@@ -450,7 +468,7 @@
     "                    .option(\"overwriteSchema\", \"true\")\n",
     "                \n",
     "                if debug:\n",
-    "                    print(f\"  Mode: OVERWRITE\")\n",
+    "                    logger.info(f\"  Mode: OVERWRITE\")\n",
     "        \n",
     "        # Execute write\n",
     "        writer.saveAsTable(delta_table_full)\n",
@@ -462,7 +480,7 @@
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] EMPTY: Parquet exists but contains 0 rows\")\n",
+    "                logger.info(f\"[{table_name}] EMPTY: Parquet exists but contains 0 rows\")\n",
     "            \n",
     "            return {\n",
     "                \"log_id\": log_id,\n",
@@ -489,7 +507,7 @@
     "        # Try recovery if Delta table looks corrupt\n",
     "        if is_probably_corrupt_delta(e):\n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] Write failed, attempting DROP+RECREATE: {str(e)[:200]}\")\n",
+    "                logger.info(f\"[{table_name}] Write failed, attempting DROP+RECREATE: {str(e)[:200]}\")\n",
     "            \n",
     "            try:\n",
     "                # Drop and recreate\n",
@@ -531,20 +549,20 @@
     "                error_message = f\"Initial write failed but table was recreated. Original error: {str(e)[:300]}\"\n",
     "                \n",
     "                if debug:\n",
-    "                    print(f\"[{table_name}] Recovery successful\")\n",
+    "                    logger.info(f\"[{table_name}] Recovery successful\")\n",
     "                \n",
     "            except Exception as e2:\n",
     "                status = \"FAILED\"\n",
     "                error_message = f\"Write failed and recovery failed: {str(e2)[:500]}\"\n",
     "                \n",
     "                if debug:\n",
-    "                    print(f\"[{table_name}] Recovery FAILED: {str(e2)[:200]}\")\n",
+    "                    logger.info(f\"[{table_name}] Recovery FAILED: {str(e2)[:200]}\")\n",
     "        else:\n",
     "            status = \"FAILED\"\n",
     "            error_message = f\"Write failed: {str(e)[:500]}\"\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"[{table_name}] FAILED: {str(e)[:200]}\")\n",
+    "                logger.info(f\"[{table_name}] FAILED: {str(e)[:200]}\")\n",
     "    \n",
     "    # ========================================================================\n",
     "    # STEP 4: Return Results\n",
@@ -554,7 +572,7 @@
     "    duration = int((end_time - start_time).total_seconds())\n",
     "    \n",
     "    if debug:\n",
-    "        print(f\"[{table_name}] {status} in {duration}s ({rows_processed:,} rows)\")\n",
+    "        logger.info(f\"[{table_name}] {status} in {duration}s ({rows_processed:,} rows)\")\n",
     "    \n",
     "    return {\n",
     "        \"log_id\": log_id,\n",
@@ -575,12 +593,12 @@
     "    }\n",
     "\n",
     "\n",
-    "print(\"✓ Bronze worker function defined\")"
+    "logger.info(\"✓ Bronze worker function defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "## [4] Function Ready\n",
@@ -616,18 +634,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"BRONZE WORKER READY\")\n",
-    "print(\"=\" * 80)\n",
-    "print(f\"Base path: {BASE_PATH}\")\n",
-    "print(f\"Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")\n",
-    "print(\"\\nFunction available: process_bronze_table(table_def, source_name, run_ts, ...)\")\n",
-    "print(\"\\n⚠️  Remember to set RUN_ID before calling process_bronze_table()\")\n",
-    "print(\"✓ Bronze worker notebook loaded successfully\")"
+    "logger.info(\"\\n\" + \"=\" * 80)\n",
+    "logger.info(\"BRONZE WORKER READY\")\n",
+    "logger.info(\"=\" * 80)\n",
+    "logger.info(f\"Base path: {BASE_PATH}\")\n",
+    "logger.info(f\"Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")\n",
+    "logger.info(\"\\nFunction available: process_bronze_table(table_def, source_name, run_ts, ...)\")\n",
+    "logger.info(\"\\n⚠️  Remember to set RUN_ID before calling process_bronze_table()\")\n",
+    "logger.info(\"✓ Bronze worker notebook loaded successfully\")"
    ]
   }
  ],
