--- a/notebooks/11_bronze_watermark_merge.ipynb
+++ b/notebooks/11_bronze_watermark_merge.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1",
    "metadata": {},
    "source": [
     "# 11 — Bronze Watermark Merge\n",
@@ -39,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {
     "tags": [
      "parameters"
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "source": [
     "## [1] Imports and Path Setup"
@@ -65,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +83,24 @@
     "import pyarrow.parquet as pq\n",
     "import pyarrow.dataset as ds\n",
     "\n",
-    "print(\"✓ Imports loaded\")"
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "if not logger.handlers:\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)\n",
+    "\n",
+    "\n",
+    "logger.info(\"✓ Imports loaded\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,14 +121,14 @@
     "\n",
     "BASE_PATH = detect_base_path()\n",
     "\n",
-    "print(f\"✓ Base path: {BASE_PATH}\")\n",
-    "print(f\"✓ Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")"
+    "logger.info(f\"✓ Base path: {BASE_PATH}\")\n",
+    "logger.info(f\"✓ Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,16 +145,16 @@
     "\n",
     "wm_folder_full = f'{BASE_PATH}/{wm_folder}'\n",
     "\n",
-    "print(f\"\\nParameters:\")\n",
-    "print(f\"  Source: {source}\")\n",
-    "print(f\"  Run ID: {run_id}\")\n",
-    "print(f\"  Watermark config: {wm_configpath_full}\")\n",
-    "print(f\"  Runtime folder: {wm_folder_full}\")"
+    "logger.info(f\"\\nParameters:\")\n",
+    "logger.info(f\"  Source: {source}\")\n",
+    "logger.info(f\"  Run ID: {run_id}\")\n",
+    "logger.info(f\"  Watermark config: {wm_configpath_full}\")\n",
+    "logger.info(f\"  Runtime folder: {wm_folder_full}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "## [2] Load Watermarks Configuration"
@@ -144,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,13 +174,13 @@
     "with open(wm_configpath_full, 'r') as f:\n",
     "    cfg = json.load(f)\n",
     "\n",
-    "print(f\"✓ Loaded watermarks config\")"
+    "logger.info(f\"✓ Loaded watermarks config\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,12 +192,12 @@
     "    raise ValueError(f\"Source '{source}' not found in watermarks config\")\n",
     "\n",
     "tables_map = src.get(\"tables\", {})\n",
-    "print(f\"✓ Found source '{source}' with {len(tables_map)} table watermarks\")"
+    "logger.info(f\"✓ Found source '{source}' with {len(tables_map)} table watermarks\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "## [3] Read Watermark Updates with PyArrow\n",
@@ -190,24 +209,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check if runtime folder exists\n",
     "if not os.path.exists(wm_folder_full):\n",
-    "    print(f\"⚠️  No watermark runtime folder found: {wm_folder_full}\")\n",
-    "    print(f\"   This is normal if no incremental tables were processed\")\n",
+    "    logger.info(f\"⚠️  No watermark runtime folder found: {wm_folder_full}\")\n",
+    "    logger.info(f\"   This is normal if no incremental tables were processed\")\n",
     "    updates = {}\n",
     "else:\n",
-    "    print(f\"\\n📂 Reading watermark updates from: {wm_folder_full}\")\n",
+    "    logger.info(f\"\\n📂 Reading watermark updates from: {wm_folder_full}\")\n",
     "    updates = {}\n",
     "    \n",
     "    # List table folders\n",
     "    table_folders = [d for d in os.listdir(wm_folder_full) \n",
     "                     if os.path.isdir(os.path.join(wm_folder_full, d))]\n",
     "    \n",
-    "    print(f\"   Found {len(table_folders)} table folders\")\n",
+    "    logger.info(f\"   Found {len(table_folders)} table folders\")\n",
     "    \n",
     "    # Process each table folder\n",
     "    for table_name in table_folders:\n",
@@ -218,7 +237,7 @@
     "            parquet_files = [f for f in os.listdir(table_path) if f.endswith('.parquet')]\n",
     "            \n",
     "            if not parquet_files:\n",
-    "                print(f\"   ⚠️  {table_name}: No parquet files found\")\n",
+    "                logger.info(f\"   ⚠️  {table_name}: No parquet files found\")\n",
     "                continue\n",
     "            \n",
     "            # Read all parquets with PyArrow\n",
@@ -238,21 +257,21 @@
     "                if valid_watermarks:\n",
     "                    max_wm = max(valid_watermarks)\n",
     "                    updates[table_name] = max_wm\n",
-    "                    print(f\"   ✓ {table_name}: {max_wm}\")\n",
+    "                    logger.info(f\"   ✓ {table_name}: {max_wm}\")\n",
     "                else:\n",
-    "                    print(f\"   ⚠️  {table_name}: No valid watermarks found\")\n",
+    "                    logger.info(f\"   ⚠️  {table_name}: No valid watermarks found\")\n",
     "            else:\n",
-    "                print(f\"   ⚠️  {table_name}: No watermark column or empty table\")\n",
+    "                logger.info(f\"   ⚠️  {table_name}: No watermark column or empty table\")\n",
     "        \n",
     "        except Exception as e:\n",
-    "            print(f\"   ⚠️  {table_name}: Error reading watermark - {str(e)[:80]}\")\n",
+    "            logger.info(f\"   ⚠️  {table_name}: Error reading watermark - {str(e)[:80]}\")\n",
     "    \n",
-    "    print(f\"\\n✓ Found {len(updates)} watermark updates\")"
+    "    logger.info(f\"\\n✓ Found {len(updates)} watermark updates\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "## [4] Compare Old vs New Watermarks"
@@ -261,14 +280,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
     "if updates:\n",
-    "    print(\"\\n🔍 Comparing old vs new watermarks:\")\n",
-    "    print(f\"{'Table':<30} {'Old Watermark':<25} {'New Watermark':<25} {'Status':<15}\")\n",
-    "    print(\"-\" * 95)\n",
+    "    logger.info(\"\\n🔍 Comparing old vs new watermarks:\")\n",
+    "    logger.info(f\"{'Table':<30} {'Old Watermark':<25} {'New Watermark':<25} {'Status':<15}\")\n",
+    "    logger.info(\"-\" * 95)\n",
     "    \n",
     "    for table, new_wm in sorted(updates.items()):\n",
     "        old_wm = tables_map.get(table)\n",
@@ -280,14 +299,14 @@
     "        else:\n",
     "            status = \"🔄 UPDATE\"\n",
     "        \n",
-    "        print(f\"{table:<30} {str(old_wm):<25} {str(new_wm):<25} {status:<15}\")\n",
+    "        logger.info(f\"{table:<30} {str(old_wm):<25} {str(new_wm):<25} {status:<15}\")\n",
     "else:\n",
-    "    print(\"\\nℹ️  No watermark updates to process\")"
+    "    logger.info(\"\\nℹ️  No watermark updates to process\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "## [5] Update Configuration\n",
@@ -298,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,17 +336,17 @@
     "            \"old\": old_wm,\n",
     "            \"new\": new_wm\n",
     "        })\n",
-    "        print(f\"  ✓ Updated {table}: {old_wm} → {new_wm}\")\n",
+    "        logger.info(f\"  ✓ Updated {table}: {old_wm} → {new_wm}\")\n",
     "\n",
     "if changed > 0:\n",
-    "    print(f\"\\n✓ {changed} watermark(s) will be updated\")\n",
+    "    logger.info(f\"\\n✓ {changed} watermark(s) will be updated\")\n",
     "else:\n",
-    "    print(\"\\nℹ️  No watermark changes detected\")"
+    "    logger.info(\"\\nℹ️  No watermark changes detected\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "## [6] Save Configuration (Atomic Write)\n",
@@ -341,12 +360,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
     "if changed > 0:\n",
-    "    print(\"\\n💾 Saving updated watermarks config...\")\n",
+    "    logger.info(\"\\n💾 Saving updated watermarks config...\")\n",
     "    \n",
     "    tmp_path = wm_configpath_full + \".tmp\"\n",
     "    \n",
@@ -355,33 +374,33 @@
     "        with open(tmp_path, 'w') as f:\n",
     "            json.dump(cfg, f, indent=2)\n",
     "        \n",
-    "        print(f\"  ✓ Wrote temporary file: {tmp_path}\")\n",
+    "        logger.info(f\"  ✓ Wrote temporary file: {tmp_path}\")\n",
     "        \n",
     "        # Atomic replace\n",
     "        os.replace(tmp_path, wm_configpath_full)\n",
     "        \n",
-    "        print(f\"  ✓ Replaced original file: {wm_configpath_full}\")\n",
-    "        print(\"\\n✓ Watermarks config saved successfully\")\n",
+    "        logger.info(f\"  ✓ Replaced original file: {wm_configpath_full}\")\n",
+    "        logger.info(\"\\n✓ Watermarks config saved successfully\")\n",
     "        \n",
     "    except Exception as e:\n",
-    "        print(f\"\\n✗ Failed to save config: {str(e)}\")\n",
+    "        logger.info(f\"\\n✗ Failed to save config: {str(e)}\")\n",
     "        \n",
     "        # Cleanup temp file if it exists\n",
     "        if os.path.exists(tmp_path):\n",
     "            try:\n",
     "                os.remove(tmp_path)\n",
-    "                print(f\"  ✓ Cleaned up temporary file\")\n",
+    "                logger.info(f\"  ✓ Cleaned up temporary file\")\n",
     "            except:\n",
     "                pass\n",
     "        \n",
     "        raise\n",
     "else:\n",
-    "    print(\"\\nℹ️  No changes to save\")"
+    "    logger.info(\"\\nℹ️  No changes to save\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "## [7] Return Result\n",
@@ -392,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,24 +425,24 @@
     "    \"changes\": changes\n",
     "}\n",
     "\n",
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"WATERMARK MERGE SUMMARY\")\n",
-    "print(\"=\" * 80)\n",
-    "print(f\"Source: {result['source']}\")\n",
-    "print(f\"Run ID: {result['run_id']}\")\n",
-    "print(f\"Watermark files processed: {result['updates_processed']}\")\n",
-    "print(f\"Watermarks changed: {result['watermarks_changed']}\")\n",
-    "print(f\"Config file updated: {result['config_updated']}\")\n",
-    "print(\"=\" * 80)\n",
+    "logger.info(\"\\n\" + \"=\" * 80)\n",
+    "logger.info(\"WATERMARK MERGE SUMMARY\")\n",
+    "logger.info(\"=\" * 80)\n",
+    "logger.info(f\"Source: {result['source']}\")\n",
+    "logger.info(f\"Run ID: {result['run_id']}\")\n",
+    "logger.info(f\"Watermark files processed: {result['updates_processed']}\")\n",
+    "logger.info(f\"Watermarks changed: {result['watermarks_changed']}\")\n",
+    "logger.info(f\"Config file updated: {result['config_updated']}\")\n",
+    "logger.info(\"=\" * 80)\n",
     "\n",
     "# Print result as JSON for pipeline parsing\n",
     "result_json = json.dumps(result)\n",
-    "print(f\"\\nRESULT_JSON: {result_json}\")"
+    "logger.info(f\"\\nRESULT_JSON: {result_json}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "## [8] Exit for Notebook Orchestration\n",
@@ -434,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,8 +462,8 @@
     "    mssparkutils.notebook.exit(result_json)\n",
     "except NameError:\n",
     "    # mssparkutils not available (local environment)\n",
-    "    print(\"\\nℹ️  mssparkutils not available (local environment)\")\n",
-    "    print(\"   Notebook completed successfully\")"
+    "    logger.info(\"\\nℹ️  mssparkutils not available (local environment)\")\n",
+    "    logger.info(\"   Notebook completed successfully\")"
    ]
   }
  ],
