--- a/notebooks/20_silver_cdc_merge.ipynb
+++ b/notebooks/20_silver_cdc_merge.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1",
    "metadata": {},
    "source": [
     "# 20 — Silver CDC Merge Worker\n",
@@ -49,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {
     "tags": [
      "parameters"
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "source": [
     "## [1] Imports"
@@ -73,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,23 +96,34 @@
     "from typing import Dict, Any, List, Optional\n",
     "from uuid import uuid4\n",
     "\n",
+    "import logging\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
+    "if not logger.handlers:\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)\n",
+    "\n",
+    "\n",
     "# Import hash utilities\n",
     "import sys\n",
     "sys.path.append('/home/sparkadmin/source/repos/dwh_spark_processing/modules')  # Adjust if needed\n",
     "\n",
     "try:\n",
     "    from hash_utils import add_row_hash, compare_hash_differences\n",
-    "    print(\"✓ hash_utils imported successfully\")\n",
+    "    logger.info(\"✓ hash_utils imported successfully\")\n",
     "except ImportError as e:\n",
-    "    print(f\"⚠️  Warning: Could not import hash_utils: {e}\")\n",
-    "    print(\"   Make sure modules/hash_utils.py is in sys.path\")\n",
+    "    logger.info(f\"⚠️  Warning: Could not import hash_utils: {e}\")\n",
+    "    logger.info(\"   Make sure modules/hash_utils.py is in sys.path\")\n",
     "\n",
-    "print(\"✓ Imports loaded\")"
+    "logger.info(\"✓ Imports loaded\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "source": [
     "## [2] Helper Functions"
@@ -113,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,12 +196,12 @@
     "    ]\n",
     "\n",
     "\n",
-    "print(\"✓ Helper functions defined\")"
+    "logger.info(\"✓ Helper functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "source": [
     "## [3] Core Silver CDC Merge Function"
@@ -191,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +257,7 @@
     "        end_time = datetime.utcnow()\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"[{table_name}] SKIPPED: No business_keys defined (required for CDC)\")\n",
+    "            logger.info(f\"[{table_name}] SKIPPED: No business_keys defined (required for CDC)\")\n",
     "        \n",
     "        return {\n",
     "            \"log_id\": log_id,\n",
@@ -282,10 +301,10 @@
     "        silver_table_full = f\"silver.{table_name}\"\n",
     "    \n",
     "    if debug:\n",
-    "        print(f\"\\n[{table_name}] Starting Silver CDC merge ({load_mode})\")\n",
-    "        print(f\"  Bronze: {bronze_table_full}\")\n",
-    "        print(f\"  Silver: {silver_table_full}\")\n",
-    "        print(f\"  Business keys: {business_keys}\")\n",
+    "        logger.info(f\"\\n[{table_name}] Starting Silver CDC merge ({load_mode})\")\n",
+    "        logger.info(f\"  Bronze: {bronze_table_full}\")\n",
+    "        logger.info(f\"  Silver: {silver_table_full}\")\n",
+    "        logger.info(f\"  Business keys: {business_keys}\")\n",
     "    \n",
     "    try:\n",
     "        # ====================================================================\n",
@@ -302,14 +321,14 @@
     "            \n",
     "            if debug:\n",
     "                bronze_count = bronze_current.count()\n",
-    "                print(f\"  Reconstructed Bronze state: {bronze_count:,} rows\")\n",
+    "                logger.info(f\"  Reconstructed Bronze state: {bronze_count:,} rows\")\n",
     "        else:\n",
     "            # Snapshot/window: Bronze contains current state\n",
     "            bronze_current = spark.table(bronze_table_full)\n",
     "            \n",
     "            if debug:\n",
     "                bronze_count = bronze_current.count()\n",
-    "                print(f\"  Bronze snapshot: {bronze_count:,} rows\")\n",
+    "                logger.info(f\"  Bronze snapshot: {bronze_count:,} rows\")\n",
     "        \n",
     "        # Get business columns only (exclude metadata)\n",
     "        business_cols = get_business_columns(bronze_current)\n",
@@ -326,7 +345,7 @@
     "        )\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"  Added row_hash to Bronze\")\n",
+    "            logger.info(f\"  Added row_hash to Bronze\")\n",
     "        \n",
     "        # ====================================================================\n",
     "        # STEP 3: Ensure Silver Table Exists\n",
@@ -335,7 +354,7 @@
     "        if not spark.catalog.tableExists(silver_table_full):\n",
     "            # Create Silver table with initial data\n",
     "            if debug:\n",
-    "                print(f\"  Creating new Silver table: {silver_table_full}\")\n",
+    "                logger.info(f\"  Creating new Silver table: {silver_table_full}\")\n",
     "            \n",
     "            # Add Silver metadata columns\n",
     "            silver_initial = bronze_with_hash \\\n",
@@ -356,7 +375,7 @@
     "            duration = int((end_time - start_time).total_seconds())\n",
     "            \n",
     "            if debug:\n",
-    "                print(f\"  Created Silver table with {rows_inserted:,} rows\")\n",
+    "                logger.info(f\"  Created Silver table with {rows_inserted:,} rows\")\n",
     "            \n",
     "            return {\n",
     "                \"log_id\": log_id,\n",
@@ -410,7 +429,7 @@
     "        \n",
     "        # Execute MERGE\n",
     "        if debug:\n",
-    "            print(f\"  Executing MERGE...\")\n",
+    "            logger.info(f\"  Executing MERGE...\")\n",
     "        \n",
     "        merge_builder = silver_delta.alias(\"target\").merge(\n",
     "            bronze_for_merge.alias(\"source\"),\n",
@@ -432,7 +451,7 @@
     "        merge_result = merge_builder.execute()\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"  MERGE completed\")\n",
+    "            logger.info(f\"  MERGE completed\")\n",
     "        \n",
     "        # ====================================================================\n",
     "        # STEP 5: DELETE Detection (Incremental only)\n",
@@ -442,7 +461,7 @@
     "        \n",
     "        if load_mode == \"incremental\":\n",
     "            if debug:\n",
-    "                print(f\"  Detecting deletes...\")\n",
+    "                logger.info(f\"  Detecting deletes...\")\n",
     "            \n",
     "            # Get active keys from Silver\n",
     "            silver_current = spark.table(silver_table_full).where(\"is_deleted = false\")\n",
@@ -458,7 +477,7 @@
     "            \n",
     "            if deleted_count > 0:\n",
     "                if debug:\n",
-    "                    print(f\"  Found {deleted_count:,} deleted keys\")\n",
+    "                    logger.info(f\"  Found {deleted_count:,} deleted keys\")\n",
     "                \n",
     "                # Mark as deleted (soft delete)\n",
     "                delete_merge_condition = \" AND \".join([\n",
@@ -478,7 +497,7 @@
     "                rows_deleted = deleted_count\n",
     "            else:\n",
     "                if debug:\n",
-    "                    print(f\"  No deletes detected\")\n",
+    "                    logger.info(f\"  No deletes detected\")\n",
     "        \n",
     "        # ====================================================================\n",
     "        # STEP 6: Calculate Statistics\n",
@@ -525,7 +544,7 @@
     "        bronze_rows = None\n",
     "        \n",
     "        if debug:\n",
-    "            print(f\"[{table_name}] FAILED: {str(e)[:200]}\")\n",
+    "            logger.info(f\"[{table_name}] FAILED: {str(e)[:200]}\")\n",
     "    \n",
     "    # ========================================================================\n",
     "    # STEP 7: Return Results\n",
@@ -535,9 +554,9 @@
     "    duration = int((end_time - start_time).total_seconds())\n",
     "    \n",
     "    if debug and status == \"SUCCESS\":\n",
-    "        print(f\"[{table_name}] SUCCESS in {duration}s\")\n",
-    "        print(f\"  Silver rows: {total_silver_rows:,}\")\n",
-    "        print(f\"  Deleted: {rows_deleted}\")\n",
+    "        logger.info(f\"[{table_name}] SUCCESS in {duration}s\")\n",
+    "        logger.info(f\"  Silver rows: {total_silver_rows:,}\")\n",
+    "        logger.info(f\"  Deleted: {rows_deleted}\")\n",
     "    \n",
     "    return {\n",
     "        \"log_id\": log_id,\n",
@@ -562,12 +581,12 @@
     "    }\n",
     "\n",
     "\n",
-    "print(\"✓ Silver CDC merge function defined\")"
+    "logger.info(\"✓ Silver CDC merge function defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "## [4] Function Ready\n",
@@ -602,24 +621,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"\\n\" + \"=\" * 80)\n",
-    "print(\"SILVER CDC MERGE WORKER READY\")\n",
-    "print(\"=\" * 80)\n",
-    "print(\"\\nFunction available: process_silver_cdc_merge(table_def, source_name, run_ts, ...)\")\n",
-    "print(\"\\nCDC Capabilities:\")\n",
-    "print(\"  ✓ INSERT detection (new keys)\")\n",
-    "print(\"  ✓ UPDATE detection (changed rows via hash)\")\n",
-    "print(\"  ✓ DELETE detection (missing keys from Bronze)\")\n",
-    "print(\"  ✓ UNCHANGED tracking (same hash)\")\n",
-    "print(\"\\n⚠️  Remember to:\")\n",
-    "print(\"  1. Set RUN_ID before calling function\")\n",
-    "print(\"  2. Ensure business_keys defined in table config\")\n",
-    "print(\"  3. Run Bronze load successfully first\")\n",
-    "print(\"\\n✓ Silver CDC merge notebook loaded successfully\")"
+    "logger.info(\"\\n\" + \"=\" * 80)\n",
+    "logger.info(\"SILVER CDC MERGE WORKER READY\")\n",
+    "logger.info(\"=\" * 80)\n",
+    "logger.info(\"\\nFunction available: process_silver_cdc_merge(table_def, source_name, run_ts, ...)\")\n",
+    "logger.info(\"\\nCDC Capabilities:\")\n",
+    "logger.info(\"  ✓ INSERT detection (new keys)\")\n",
+    "logger.info(\"  ✓ UPDATE detection (changed rows via hash)\")\n",
+    "logger.info(\"  ✓ DELETE detection (missing keys from Bronze)\")\n",
+    "logger.info(\"  ✓ UNCHANGED tracking (same hash)\")\n",
+    "logger.info(\"\\n⚠️  Remember to:\")\n",
+    "logger.info(\"  1. Set RUN_ID before calling function\")\n",
+    "logger.info(\"  2. Ensure business_keys defined in table config\")\n",
+    "logger.info(\"  3. Run Bronze load successfully first\")\n",
+    "logger.info(\"\\n✓ Silver CDC merge notebook loaded successfully\")"
    ]
   }
  ],
