--- a/notebooks/02_utils_config.ipynb
+++ b/notebooks/02_utils_config.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1",
    "metadata": {},
    "source": [
     "# 02 — Configuration Utilities for Bronze and Silver Processing\n",
@@ -27,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {
     "tags": [
      "parameters"
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "source": [
     "## [1] Imports and Path Detection"
@@ -50,23 +60,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import os\n",
-    "from typing import Dict, List, Any, Optional, Set\n",
-    "from datetime import datetime, date\n",
-    "from pathlib import Path\n",
+    "from typing import Dict, List, Any, Optional\n",
+    "import logging\n",
     "\n",
-    "print(\"✓ Imports loaded\")"
+    "logger = logging.getLogger(__name__)\n",
+    "if not logger.handlers:\n",
+    "    handler = logging.StreamHandler()\n",
+    "    formatter = logging.Formatter(\"%(asctime)s %(levelname)s %(name)s - %(message)s\")\n",
+    "    handler.setFormatter(formatter)\n",
+    "    logger.addHandler(handler)\n",
+    "logger.setLevel(logging.INFO)\n",
+    "\n",
+    "logger.info(\"✓ Imports loaded\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +108,11 @@
     "    \n",
     "    # Option 2: Custom cluster with mounted lakehouse storage\n",
     "    # Pattern: /data/lakehouse/{lakehouse_name}/Files\n",
-    "    print(f\"Checking for custom cluster Files directory /data/lakehouse... {os.path.exists('/data/lakehouse')}\")\n",
+    "    logger.info(f\"Checking for custom cluster Files directory /data/lakehouse... {os.path.exists('/data/lakehouse')}\")\n",
     "    if os.path.exists('/data/lakehouse'):\n",
     "        pattern = '/data/lakehouse/**/Files'\n",
     "        matches = glob.glob(pattern, recursive=True)\n",
-    "        print(f\"Detected matches for custom cluster Files directories: {matches}\")\n",
+    "        logger.info(f\"Detected matches for custom cluster Files directories: {matches}\")\n",
     "        if matches:\n",
     "            # Use first match (sorted for consistency)\n",
     "            base = sorted(matches)[0]\n",
@@ -120,13 +137,13 @@
     "else:\n",
     "    env_type = 'Local/Relative'\n",
     "\n",
-    "print(f\"✓ Base path: {BASE_PATH}\")\n",
-    "print(f\"✓ Environment: {env_type}\")"
+    "logger.info(f\"✓ Base path: {BASE_PATH}\")\n",
+    "logger.info(f\"✓ Environment: {env_type}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "source": [
     "## [2] Configuration Paths"
@@ -135,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,15 +164,15 @@
     "# Data paths\n",
     "DATA_BASE = f\"{BASE_PATH}/greenhouse_sources\"  # Default, can be overridden in DAG\n",
     "\n",
-    "print(f\"✓ Config directory: {CONFIG_DIR}\")\n",
-    "print(f\"✓ Watermarks path: {WATERMARKS_PATH}\")\n",
-    "print(f\"✓ Runplan path: {RUNPLAN_PATH}\")\n",
-    "print(f\"✓ Data base path: {DATA_BASE}\")"
+    "logger.info(f\"✓ Config directory: {CONFIG_DIR}\")\n",
+    "logger.info(f\"✓ Watermarks path: {WATERMARKS_PATH}\")\n",
+    "logger.info(f\"✓ Runplan path: {RUNPLAN_PATH}\")\n",
+    "logger.info(f\"✓ Data base path: {DATA_BASE}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "## [3] DAG Loading and Validation"
@@ -164,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,15 +253,15 @@
     "        if \"load_mode\" in table:\n",
     "            load_mode = table[\"load_mode\"].lower()\n",
     "            if load_mode not in valid_load_modes:\n",
-    "                print(f\"⚠️  Warning: Table '{table['name']}' has unsupported load_mode: {load_mode}\")\n",
+    "                logger.info(f\"⚠️  Warning: Table '{table['name']}' has unsupported load_mode: {load_mode}\")\n",
     "\n",
     "\n",
-    "print(\"✓ DAG loading functions defined\")"
+    "logger.info(\"✓ DAG loading functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "## [4] Table Filtering"
@@ -253,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +321,7 @@
     "    found_names = {t[\"name\"] for t in filtered}\n",
     "    missing = retry_set - found_names\n",
     "    if missing:\n",
-    "        print(f\"⚠️  Warning: Retry tables not found in DAG: {sorted(missing)}\")\n",
+    "        logger.info(f\"⚠️  Warning: Retry tables not found in DAG: {sorted(missing)}\")\n",
     "    \n",
     "    return filtered\n",
     "\n",
@@ -361,12 +378,12 @@
     "    return tables\n",
     "\n",
     "\n",
-    "print(\"✓ Table filtering functions defined\")"
+    "logger.info(\"✓ Table filtering functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "## [5] Watermark Management (READ-ONLY)"
@@ -375,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,13 +458,13 @@
     "    return source_wm.get(table_name)\n",
     "\n",
     "\n",
-    "print(\"✓ Watermark functions defined (READ-ONLY)\")\n",
-    "print(\"⚠️  NOTE: Watermarks are managed by extraction pipeline, not by notebooks\")"
+    "logger.info(\"✓ Watermark functions defined (READ-ONLY)\")\n",
+    "logger.info(\"⚠️  NOTE: Watermarks are managed by extraction pipeline, not by notebooks\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "## [6] Path Building Utilities"
@@ -456,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,12 +528,12 @@
     "    return f\"{default_schema}.{table_name}\"\n",
     "\n",
     "\n",
-    "print(\"✓ Path building functions defined\")"
+    "logger.info(\"✓ Path building functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "## [7] DAG Query Helpers"
@@ -525,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,12 +628,12 @@
     "    }\n",
     "\n",
     "\n",
-    "print(\"✓ DAG query helper functions defined\")"
+    "logger.info(\"✓ DAG query helper functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "## [8] Runplan Management"
@@ -625,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +654,7 @@
     "        List of scheduled runs\n",
     "    \"\"\"\n",
     "    if not os.path.exists(RUNPLAN_PATH):\n",
-    "        print(f\"⚠️  Warning: Runplan file not found: {RUNPLAN_PATH}\")\n",
+    "        logger.info(f\"⚠️  Warning: Runplan file not found: {RUNPLAN_PATH}\")\n",
     "        return []\n",
     "    \n",
     "    with open(RUNPLAN_PATH, 'r') as f:\n",
@@ -660,12 +677,12 @@
     "    return [entry for entry in runplan if entry.get(\"source\") == source]\n",
     "\n",
     "\n",
-    "print(\"✓ Runplan functions defined\")"
+    "logger.info(\"✓ Runplan functions defined\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "## [9] Verification and Testing"
@@ -674,46 +691,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(\"=\" * 80)\n",
-    "# print(\"CONFIGURATION UTILITIES VERIFICATION\")\n",
-    "# print(\"=\" * 80)\n",
+    "# logger.info(\"=\" * 80)\n",
+    "# logger.info(\"CONFIGURATION UTILITIES VERIFICATION\")\n",
+    "# logger.info(\"=\" * 80)\n",
     "\n",
     "# # Test environment detection\n",
-    "# print(f\"\\n1. Environment Detection:\")\n",
-    "# print(f\"   Base path: {BASE_PATH}\")\n",
-    "# print(f\"   Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")\n",
+    "# logger.info(f\"\\n1. Environment Detection:\")\n",
+    "# logger.info(f\"   Base path: {BASE_PATH}\")\n",
+    "# logger.info(f\"   Environment: {'Fabric' if '/lakehouse' in BASE_PATH else 'Local'}\")\n",
     "\n",
     "# # Test config paths\n",
-    "# print(f\"\\n2. Configuration Paths:\")\n",
-    "# print(f\"   Config dir: {CONFIG_DIR}\")\n",
-    "# print(f\"   Watermarks: {WATERMARKS_PATH}\")\n",
-    "# print(f\"   Runplan: {RUNPLAN_PATH}\")\n",
+    "# logger.info(f\"\\n2. Configuration Paths:\")\n",
+    "# logger.info(f\"   Config dir: {CONFIG_DIR}\")\n",
+    "# logger.info(f\"   Watermarks: {WATERMARKS_PATH}\")\n",
+    "# logger.info(f\"   Runplan: {RUNPLAN_PATH}\")\n",
     "\n",
     "# # Check if config files exist\n",
-    "# print(f\"\\n3. Config Files Status:\")\n",
-    "# print(f\"   Config dir exists: {os.path.exists(CONFIG_DIR)}\")\n",
-    "# print(f\"   Watermarks exists: {os.path.exists(WATERMARKS_PATH)}\")\n",
-    "# print(f\"   Runplan exists: {os.path.exists(RUNPLAN_PATH)}\")\n",
+    "# logger.info(f\"\\n3. Config Files Status:\")\n",
+    "# logger.info(f\"   Config dir exists: {os.path.exists(CONFIG_DIR)}\")\n",
+    "# logger.info(f\"   Watermarks exists: {os.path.exists(WATERMARKS_PATH)}\")\n",
+    "# logger.info(f\"   Runplan exists: {os.path.exists(RUNPLAN_PATH)}\")\n",
     "\n",
     "# # Try to list DAG files\n",
     "# if os.path.exists(CONFIG_DIR):\n",
     "#     dag_files = [f for f in os.listdir(CONFIG_DIR) if f.startswith('dag_') and f.endswith('.json')]\n",
-    "#     print(f\"\\n4. Available DAG files: {len(dag_files)}\")\n",
+    "#     logger.info(f\"\\n4. Available DAG files: {len(dag_files)}\")\n",
     "#     for dag_file in sorted(dag_files)[:5]:  # Show first 5\n",
-    "#         print(f\"   - {dag_file}\")\n",
+    "#         logger.info(f\"   - {dag_file}\")\n",
     "#     if len(dag_files) > 5:\n",
-    "#         print(f\"   ... and {len(dag_files) - 5} more\")\n",
+    "#         logger.info(f\"   ... and {len(dag_files) - 5} more\")\n",
     "\n",
-    "# print(\"\\n✓ Configuration utilities ready\")"
+    "# logger.info(\"\\n✓ Configuration utilities ready\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "source": [
     "## [10] Example Usage\n",
@@ -724,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,16 +752,16 @@
     "# \n",
     "# # Get all enabled tables\n",
     "# tables = get_tables_to_process(dag)\n",
-    "# print(f\"Found {len(tables)} enabled tables\")\n",
+    "# logger.info(f\"Found {len(tables)} enabled tables\")\n",
     "# \n",
     "# # Get only incremental tables\n",
     "# incremental_tables = get_tables_by_load_mode(tables, \"incremental\")\n",
-    "# print(f\"Found {len(incremental_tables)} incremental tables\")\n",
+    "# logger.info(f\"Found {len(incremental_tables)} incremental tables\")\n",
     "# \n",
     "# # Get metadata\n",
     "# metadata = get_dag_metadata(dag)\n",
-    "# print(f\"Source: {metadata['source']}\")\n",
-    "# print(f\"Base files: {metadata['base_files']}\")\n",
+    "# logger.info(f\"Source: {metadata['source']}\")\n",
+    "# logger.info(f\"Base files: {metadata['base_files']}\")\n",
     "# \n",
     "# # Build parquet path for a table\n",
     "# table = tables[0]\n",
@@ -754,14 +771,14 @@
     "#     table_name=table['name'],\n",
     "#     base_files=metadata['base_files']\n",
     "# )\n",
-    "# print(f\"Parquet path: {parquet_path}\")\n",
+    "# logger.info(f\"Parquet path: {parquet_path}\")\n",
     "# \n",
     "# # Get watermark for incremental table\n",
     "# if table.get('load_mode') == 'incremental':\n",
     "#     watermark = get_table_watermark(metadata['source'], table['name'])\n",
-    "#     print(f\"Watermark for {table['name']}: {watermark}\")\n",
+    "#     logger.info(f\"Watermark for {table['name']}: {watermark}\")\n",
     "\n",
-    "#print(\"✓ Example usage documented (commented out)\")"
+    "#logger.info(\"✓ Example usage documented (commented out)\")"
    ]
   }
  ],
